Fixing layout problems

--- a/public/stylesheets/myweight.css
+++ b/public/stylesheets/myweight.css
@@ -10,7 +10,7 @@ height:50px;
 padding:5px;
 border:1px solid;
 margin:0px;
-background-color: red;
+display:table;
 }
 div.graph_weight
 {
