--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -18,7 +18,6 @@ a:hover { color: #fff; background-color:#000; }
 
 div.field, div.actions {
  margin-bottom: 0px;
- background-color: blue;
 }
 
 #notice {
@@ -27,7 +26,7 @@ div.field, div.actions {
 
 .field_with_errors {
   padding: 2px;
-  background-color: black;
+  background-color: red;
   display: table;
   float:left;
 }
